# nlpFinalProject

./: .gitignore  README.md  pyproject.toml
data/: .gitkeep
notebooks/: Preprocess.ipynb  model.ipynb  plannar.ipynb
src/: attention.py  decoder.py  encoder.py  main.py  positionalencoding.py  transformer.py  utilfunc.py
