[tool.poetry]
name = "nlpfinalproject"
version = "0.1.0"
description = ""
authors = ["YG29 <y.gao.29@student.rug.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
nltk = "^3.8.1"
jupyter = "^1.0.0"
notebook = "^7.1.1"
numpy = "^1.26.4"
tensorflow-metal = "^1.1.0"
matplotlib = "^3.8.3"
poetry = "^1.8.2"
update = "^0.0.1"
tensorflow-text = {path = "wheels/tensorflow_text-2.13.0-cp310-cp310-macosx_11_0_arm64.whl"}
tensorflow = "^2.16.1"
scikit-learn = "^1.4.1.post1"
contractions = "^0.1.73"
transformers = "^4.38.2"
keras = "^3.1.1"
tqdm = "^4.66.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
